--- a/subfolder1/package.json
+++ b/subfolder1/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lodash": "4.17.0"
+    "lodash": "4.17.0",
+    "express": "4.16.0"
   }
 }
